# opnsense-mcp

./: .coverage  .dockerignore  .flake8  .gitguardian.yaml  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  BROKEN_TRACKER.md  CLAUDE.md  Dockerfile  LICENSE  MCP_TOOL_FIX_SUMMARY.md  PRE_COMMIT_NOTES.md  PROJECT_STATUS.md  README  README.md  STANDALONE_TOOLS.md  api_explorer.py  base_tool.py  benchmark_performance.py  bridge_config.json  check_rule.py  client.py  coverage.json  getarp.py  glama.json  main.py  mcp_start.sh  opnsense-mcp-start  parallel-buckets.local.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run_mcp_server.sh  run_test_with_cleanup.py  run_venv.py  start_opnsense_bridge.sh  test_api_performance.py  tmp_all_py_files.txt  (+12 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml  main.yml  secret-scan.yml
deploy/: Containerfile  README.md  TLS.md  caddyfile.example  docker-compose.yml  environment.example  flent-sidecar-net10.sh  install.sh  lib.sh  opnsense-mcp-app.container.example  opnsense-mcp-caddy.container.example  opnsense-mcp.pod.example  uninstall.sh
deploy/ci/: compute-image-tag.sh  deploy-strongpod.sh  run-flent-baseline-remote.sh  ssh-setup.sh
docs/: AUDIT_SUMMARY.md  BADGES.md  BUG_SCRUB_PLAN.md  CENTRALIZED_DEPLOY_SPEC.md  CLAUDE_CODE_INTEGRATION.md  CODE_QUALITY_AUDIT.md  FEATURES_UPDATE.md  GETTING_STARTED.md  LM_STUDIO_INTEGRATION.md  MULTI_APP_INTEGRATION.md  POST_DEPLOY_MCP_SMOKE_TEST_PROMPT.md  PROJECT_GUIDE.md  SECURITY.md
docs/DEVELOPMENT/: CONTRIBUTING.md  PROJECT_GUIDE.md
docs/EXAMPLES/: BASIC_EXAMPLES.md  COMPLEX_EXAMPLES.md  DHCP_LEASE_DELETION.md
docs/REFERENCE/: FUNCTION_REFERENCE.md
docs/research/: dhcp-backend-endpoints.md  dhcp-host-move-feasibility.md  diagnostics-features-buckets.md  diagnostics-features-phase0-session-2026-06-28.md  diagnostics-features-session-2026-06-28.md  fq-codel-tuning-buckets.md  fq-codel-tuning-session-2026-06-20.md  project-bug-fix-buckets.md  project-bug-scrub-buckets.md  project-bug-scrub-session-2026-06-28.md  subagent-dry-run-fix-buckets.md  subagent-dry-run-fix-session-2026-06-20.md  subagent-dry-run-session-2026-06-20.md  subagent-write-dry-run-session-2026-06-20.md  traffic-shaper-bf-fix-buckets.md  traffic-shaper-broad-review-buckets.md  traffic-shaper-broad-review-session-2026-06-20.md  traffic-shaper-buckets.md  traffic-shaper-fix-buckets.md  traffic-shaper-fix-review-buckets.md  traffic-shaper-fix-review-session-2026-06-20.md  traffic-shaper-p1-fix-buckets.md  traffic-shaper-p2-fix-buckets.md  traffic-shaper-p2-fix-session-2026-06-20.md  traffic-shaper-p2-review-buckets.md  traffic-shaper-p2-review-session-2026-06-20.md  traffic-shaper-p2h-smoke-review-buckets.md  traffic-shaper-p2h-smoke-review-session-2026-06-20.md  traffic-shaper-parallel-experiment-2026-06-20.md  traffic-shaper-review-buckets.md  traffic-shaper-review-session-2026-06-20.md  traffic-shaper-session-2026-06-20.md  traffic-shaper-spec.md
examples/: .env-example  .env.example  IDE_INTEGRATION.md  README.md  bridge_config_opnsense.example.json  create_mock_data.py  mcp.json  requirements-dev.txt  vscode_launch.json  vscode_tasks.json
examples/mock_data/: arp.json  arp_table.json  firewall_logs.json  firewall_rules.json  interfaces.json  ndp_table.json  services.json  system_status.json  traffic_shaper.json
opnsense_mcp/: .env  __init__.py  _build_info_generated.py  build_info.py  fastmcp_server.py  server.py
opnsense_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
opnsense_mcp/tools/: __init__.py  aliases.py  arp.py  convert_pip_audit_to_html.py  convert_trivy_to_html.py  dhcp.py  dhcp_host_move.py  dhcp_hosts.py  dhcp_lease_delete.py  dhcp_subnet_dns.py  dns.py  firewall.py  firewall_logs.py  flush_dns.py  fw_rules.py  gateway_status.py  get_logs.py  interface.py  interface_health.py  interface_list.py  lldp.py  mk_dhcp_host.py  mkdns.py  mkfw_rule.py  optimized_block.py  packet_capture.py  pf_diagnostics.py  rm_dhcp_host.py  rmdns.py  rmfw_rule.py  set_fw_rule.py  shaper_audit.py  shaper_pipes.py  shaper_presets.py  shaper_queues.py  shaper_rules.py  shaper_service.py  shaper_settings.py  shaper_snapshot.py  ssh_fw_rule.py  (+3 more)
opnsense_mcp/utils/: __init__.py  api.py  api_backup.py  api_fixed.py  auth.py  compat.py  dhcp_host.py  dhcp_provider.py  dhcp_scope.py  dhcp_subnet_dns.py  env.py  errors.py  firewall_log_normalize.py  flent_summary.py  form_helper.py  interface_health.py  jwt_helper.py  logging.py  mock_api.py  oui_lookup.py  paramiko_ssh.py  passlib_shim.py  pf_diagnostics.py  shaper_audit_rules.py  shaper_interpret.py  shaper_mutation.py  shaper_normalize.py  shaper_serialize.py  shaper_snapshot_store.py  shaper_types.py  shaper_write_helpers.py  simple_auth.py  ssh_client.py
tests/: test_add_firewall_rule_payload.py  test_additional_tools.py  test_all_tools.py  test_api_client_perf.py  test_bandit.py  test_build_info.py  test_deploy_lib.py  test_dhcp_detection.py  test_dhcp_host.py  test_dhcp_host_client.py  test_dhcp_host_move_tool.py  test_dhcp_host_provider.py  test_dhcp_hosts_client.py  test_dhcp_hosts_tool.py  test_dhcp_lease_delete.py  test_dhcp_subnet_dns_common.py  test_dhcp_subnet_dns_dnsmasq.py  test_dhcp_subnet_dns_kea.py  test_dhcp_subnet_dns_tools.py  test_dns_host_override.py  test_fastmcp_server.py  test_firewall_log_normalize.py  test_flent_ci.py  test_get_logs_analysis.py  test_get_logs_cache.py  test_get_logs_filters.py  test_get_logs_rule_correlation.py  test_integration.py  test_integration_clean.py  test_interface_health.py  test_interface_health_tool.py  test_jwt_helper.py  test_mk_dhcp_host_tool.py  test_ollama_workstation.py  test_opnsense_env.py  test_pf_diagnostics_client.py  test_pf_diagnostics_normalize.py  test_pf_diagnostics_tools.py  test_rm_dhcp_host_client.py  test_rm_dhcp_host_tool.py  (+19 more)
tests/test_dhcp_providers/: __init__.py  test_dnsmasq.py  test_dnsmasq_create_host.py  test_isc.py  test_kea.py
tools/: __init__.py  arp.py  tools.py
~/vs-code/: README_OLLAMA_MCP_DEMO.md
(+20 files in other folders)
